--- a/VendingMachineCodeFirst/VendingMachineWpf/App.xaml
+++ b/VendingMachineCodeFirst/VendingMachineWpf/App.xaml
@@ -22,5 +22,13 @@
             <Setter Property="Margin" Value="5"/>
             <Setter Property="Padding" Value="5"/>
         </Style>
+        <Style x:Key="MoneyLabel" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="FontSize" Value="20"/>
+        </Style>
+        <Style x:Key="MoneyButton" TargetType="Button">
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Padding" Value="5"/>
+        </Style>
     </Application.Resources>
 </Application>
